# koreatech-board-crawler

./: .gitignore  README.md  crawler.py  cse_crawler.py  department_common_crawler.py  dorm_crawler.py  gunicorn.py  main.py  pyproject.toml  requirements.txt  school_crawler.py
api/: main.py
api/routers/v1/: api.py
api/routers/v2/: arch.py  cse.py  dorm.py  emc.py  ide.py  ite.py  mechanical.py  mechatronics.py  school.py  sim.py
app/: main.py  scheduler.py
app/crawler/v2/: cse_crawler.py
app/crawler/v3/: __init__.py  arch_crawler.py  common_crawler.py  cse_crawler.py  dorm_crawler.py  emc_crawler.py  ide_crawler.py  ite_crawler.py  main.py  mechanical_crawler.py  mechatronics_crawler.py  portal_crawler.py  school_crawler.py  sim_crawler.py
app/dataclass/: board.py
app/dataclass/enums/: board.py  category.py  department.py
app/firebase/: init_firebase.py  send_message.py
app/logs/: crawling_log.py  message_log.py
crawler/v1/: department_common_crawler.py  dorm_crawler.py  school_crawler.py
crawler/v2/: cse_crawler.py  department_common_crawler.py  dorm_crawler.py  school_crawler.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql  00017.edgeql  00018.edgeql
routers/v1/: api.py
routers/v2/: arch.py  cse.py  dorm.py  emc.py  ide.py  ite.py  mechanical.py  mechatronics.py  school.py  sim.py
script/: get_all_data.py  last_page.py
(+33 files in other folders)
