[tool.poetry]
name = "koreatech-board-crawler"
version = "1.0.0"
description = "Koreatech board crawler written in Python"
authors = ["WooJin Kong <kongwoojin03@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
expiringdict = "^1.2.2"
uvicorn = "^0.23.2"
edgedb = "^1.7.0"
rocketry = "^2.5.1"
aiohttp = "^3.8.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
